--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="~/Content/CustomCss/home.css">
     <link rel="stylesheet" href="~/Content/CustomCss/timeline.css">
     <link rel="stylesheet" href="~/Content/CustomCss/voting.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/schedule.css">
+
 
 
 
@@ -60,13 +62,14 @@
                     <li> <a href="@Url.Action("Index", "Livestream")"> <i class="fa fa-video-camera"></i><span>Livestream</span></a></li>
                     <li> <a href="@Url.Action("Index", "Speaker")"> <i class="fa fa-users"></i><span>Speaker</span></a></li>
                     <li> <a href="@Url.Action("Index", "Sponsor")"> <i class="fa fa-users"></i><span>Sponsor</span></a></li>
+                    <li> <a href="@Url.Action("Index", "Schedule")"> <i class="fa fa-calendar"></i><span>Schedule</span></a></li>
                     <li> <a href="@Url.Action("Index", "Logout")"> <i class="fa fa-sign-out"></i><span>Logout</span></a></li>
                     @*<li>
-                            <a href="#">
-                                <i class="icon-mail"></i><span>Demo</span>
-                                <div class="badge badge-warning">6 New</div>
-                            </a>
-                        </li>*@
+            <a href="#">
+                <i class="icon-mail"></i><span>Demo</span>
+                <div class="badge badge-warning">6 New</div>
+            </a>
+        </li>*@
                 </ul>
             </div>
             @*<div class="admin-menu">
