hien gio trang timeline

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Timeline/Index.cshtml
@@ -135,7 +135,7 @@
                     {
                         name: "startTime",
                         render: function (data, type, row) {
-                            return row.startTime.split(' ')[1].split(':')[0] + ':' + row.startTime.split(' ')[1].split(':')[1];
+                            return row.startTime.split(' ')[1].split(':')[0] + ':' + row.startTime.split(' ')[1].split(':')[1] + ' ' + row.startTime.split(' ')[2];
                         }
                     },
                     {
