+Chỉnh load động lại ở phần voting, livestream (client) + Sửa lại phần gọi ajax để load result ở trang voting (client)

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-@using HmsService.Models.Entities;
-@model Event
+@using HmsService.ViewModels;
+@model EventViewModel
 
 <div class="container-fluid">
     <div class="animated fadeIn">
