--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
@@ -1,3 +1,29 @@
 ﻿.nicescroll-cursors {
     background-color:unset !important;
 }
+
+.message-error h6{
+    color:red;
+    text-align:center;
+}
+
+.message-error {
+    width:100%;
+    margin-bottom:10px;
+    display:none;
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
