--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -2,4 +2,10 @@
 @{
     ViewBag.Title = "Livestream";
 }
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/2ccaHpy5Ewo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+@using HmsService.ViewModels
+@model SessionViewModel
+
+<div class="videoWrapper">
+    <iframe @*style="width:100%; height:100%;"*@ width="100%" height="100%" src="@(Model.LivestreamUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
