--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -4,73 +4,87 @@
 }
 @using HmsService.Models.Entities;
 
-@model Event
+@model Voting
 @{
-    var voting = Model.Sessions.FirstOrDefault(e => e.SessionID == 1).Interactions.FirstOrDefault(e => e.IsRunning == true && e.VotingId != null).Voting;
-    var listOptions = Model.Votings.FirstOrDefault(e => e.VotingId == voting.VotingId).VotingOptions;
+    /*var voting = Model.Sessions.FirstOrDefault(e => e.SessionID == 1).Interactions.FirstOrDefault(e => e.IsRunning == true && e.VotingId != null).Voting;
+    var listOptions = Model.Votings.FirstOrDefault(e => e.VotingId == voting.VotingId).VotingOptions;*/
 }
 
 <link href="~/Content/bootstrap/Poll/css/bootstrap.css" rel="stylesheet" />
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center">
-            <h3>Voting</h3>
+            <h3>Bình chọn</h3>
         </div>
     </div>
-    <div class="row ">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="user-poll-section">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <strong>Question : </strong>@voting.VotingName
-                    </div>
-                    <div class="panel-body">
-                        @{
-                            int i = 1;
-                            foreach (var item in listOptions)
-                            {
-                                <div class="radio">
-                                    <label>
-                                        <input type="radio" name="group-poll" value="@item.VotingOptionId">
-                                        <strong>@(i).  </strong>@item.VotingOptionContent
-                                    </label>
-                                </div>
-                                i++;
-                            }
-                        }
-                    </div>
-                    <h5 id="thanks" style="color:green; text-align:center; display:none;"></h5>
-                    <div class="text-center">
-                        <a id="btn-vote" class="btn btn-sm btn-default" style="background-color:darkgrey"><span class="glyphicon glyphicon-bell"></span> Mark Your Vote</a>
-                    </div>
-                    <div id="result" class="panel-body result">
-                        <h5 class="text-danger">Result Of User Votes :</h5>
-                        @*<input id="votingQuestionId" type="hidden" value="@(listQuestionOptions.FirstOrDefault().VotingQuestionId)" />*@
-                        <div>
+    @if (Model == null)
+    {
+        <h3>Hiện tại chúng tôi chưa tiến hành bình chọn</h3>
+    }
+    else
+    {
+        <div class="row ">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="user-poll-section">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <strong>Question : </strong>@Model.VotingName
+                        </div>
+                        <div class="panel-body">
                             @{
-                                int j = 1;
-                                float s = 0;
-                                float[] p = new float[listOptions.Count + 2];
-                                foreach (var item in listOptions)
+                                //int i = 1;
+                                for (int i = 0; i < Model.VotingOptions.Count(); i++)
                                 {
-                                    s = s + item.NumberOfVoting.Value;
-                                }
-                                foreach (var item in listOptions)
-                                {
-                                    p[j] = (item.NumberOfVoting.Value / s) * 100;
-                                    double n = Math.Round(p[j]);
-                                    @item.VotingOptionContent
-                                    j++;
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" data-transitiongoal="@n"></div>
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="group-poll" value="@Model.VotingOptions.ElementAt(i).VotingOptionId">
+                                            <strong>@(i).  </strong>@Model.VotingOptions.ElementAt(i).VotingOptionContent
+                                        </label>
                                     </div>
                                 }
                             }
+                        </div>
+                        <h5 id="thanks" style="color:green; text-align:center; display:none;"></h5>
+                        <div class="text-center">
+                            <a id="btn-vote" class="btn btn-sm btn-default" style="background-color:darkgrey"><span class="glyphicon glyphicon-bell"></span> Mark Your Vote</a>
+                        </div>
+                        <div id="result" class="panel-body result">
+                            <h5 class="text-danger">Result Of User Votes :</h5>
+                            @*<input id="votingQuestionId" type="hidden" value="@(listQuestionOptions.FirstOrDefault().VotingQuestionId)" />*@
+                            <div id="result-voting-section">
+                                @*@{
+                                    int j = 1;
+                                    float s = 0;
+                                    float[] p = new float[listOptions.Count + 2];
+                                    foreach (var item in listOptions)
+                                    {
+                                        s = s + item.NumberOfVoting.Value;
+                                    }
+                                    foreach (var item in listOptions)
+                                    {
+                                        p[j] = (item.NumberOfVoting.Value / s) * 100;
+                                        double n = Math.Round(p[j]);
+                                        @item.VotingOptionContent
+                                        j++;
+                                        <div class="progress progress-striped">
+                                            <div class="progress-bar progress-bar-success" role="progressbar" data-transitiongoal="@n"></div>
+                                        </div>
+                                    }
+                                }*@
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    }
+
+</div>
+
+<input type="hidden" id="txt-voting-id" value="@Model.VotingId" />
+<div id="progress-bar-result-template">
+    <div class="progress progress-striped">
+        <div class="progress-bar progress-bar-success" role="progressbar" data-transitiongoal=""></div>
     </div>
 </div>
 @section scripts {
